<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Commande Station</string>
    <string name="commande">Commande d\'une station</string>
    <string name="nom_station">nom_station</string>
    <string name="numStationVueCommande">Numéro de téléphone : </string>
    <string name="statusStationVueCommande">Status de la station : </string>
    <string name="alarm_service_started">Service lancé</string>
    <string name="alarm_service_finished">Service arreté</string>
    <string name="start_alarm">Demarrer alarme</string>
    <string name="alarm_service_label">Notification alarme</string>
    <string name="alarm_service_text_to_start">Démarrer :</string>
    <string name="alarm_service_text_to_stop">Arrêter :</string>
    <string name="status_marche">Station en fonctionnement</string>
    <string name="status_arret">Station arrêtée</string>
    <string name="envoie_msg_marche">Envoie message de démarrage</string> 
    <string name="envoie_msg_arret">Envoie message d\'arrêt</string> 
    <string name="envoie_msg_conf">Envoie message de configuration</string> 
    <string name="b_start_alarme">Activer/Désactiver le retardateur</string>
    <string name="start_station">Démarrer la station</string>
    <string name="stop_station">Arrêter la station</string>
    <string name="subtitle_arlarme_view">Configurer un message différé</string>
    <string name="b_add_alarme">Ajouter un retardateur</string>
    <string name="b_valid_form_conf">Valider</string>
    <string name="b_add_allow_phone">+</string>
    <string name="b_del_allow_phone">-</string>
    <string name="alarm_cancel">Alarme annulée</string>
    <string name="alarm_active">Alarme activée</string>
    <string name="action_start">start</string>
    <string name="action_stop">stop</string>
    <string name="action_conf">stop</string>
    <string name="error_send_sms">Erreur lors de l\'envoie du message</string>
    <string name="txt_alarm_state">Status du retardateur : </string>
    <string name="txt_alarm_active">L\'alarme est active</string>
    <string name="txt_alarm_inactive">L\'alarme est inactive</string>
    <string name="txt_empty_field">Veuillez remplir tout les champs !</string>
    <string name="txt_wrong_phone_number">Mauvais numéro de téléphone !</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_credit">Credit</string>
    <string name="pref_numberphone">Autorisation de téléphone</string>
    <string name="pref_txtactionstart">Message de démarrage</string>
    <string name="pref_txtactionstop">Message pour d\'arrêt</string>
    <string name="pref_txtistart">Lors du démarrage de la station</string>
    <string name="pref_txtistop">Lors de l\'arrêt de la station</string>
    <string name="pref_msg_allow_phone">Variable permettant de configurer les téléphones autorisés</string>
    <string name="pref_msg_start_phone">Variable permettant de configurer le message à envoyer pour démarrer le moteur</string>
    <string name="pref_msg_stop_phone">Variable permettant de configurer le message à envoyer pour arrêter le moteur</string>
    <string name="def_pref_allow_phone">ALLOW_PHONE</string>
    <string name="def_pref_start">START</string>
    <string name="def_pref_stop">STOP</string>
    <string name="def_pref_isstart">IS_START</string>
    <string name="def_pref_isstop">IS_STOP</string>
    <string name="toast_main_edit">Edition de la station </string>
    <string name="toast_main_remove">Suppression de la station </string>
    <string name="box_menu_title">Choix</string>
    <string name="box_menu_message"></string>
    <string name="box_menu_edit">Editer</string>
    <string name="box_menu_remove">Supprimer</string>
    <string name="box_confirm_cancel">Suppression annulée</string>
    <string name="box_confirm_title">Confirmation</string>
    <string name="box_config_message">Voulez-vous supprimer cet élément ?</string>
    <string name="box_config_positive">Oui</string>
    <string name="box_config_negative">Non</string>
    <string name="cb_active_send_options">Activer l\'envoie des options</string>  
    
</resources>
